%%{init: {'theme': 'forest', 'backgroundColor': '#FFFFFF'} }%%


classDiagram
    class SequenceAggregateBase {
        +string Id
        +string Name
        +string Description
    }
    
    class Sequence {
        +string Id
        +string Name
        +string Description
        +TimeSpan WorstCaseTime
        +bool CanBeParallel
        +List~SequenceParameter~ SequenceParameters
        +Update()
    }
    
    class Parameter {
        +string Id
        +string Name
        +ParameterType Type
        +string Min
        +string Max
        +string DefaultValue
        +string Format
        +string RangeId
        +string ResourceId
        +Range Range
        +Resource Resource
        +List~SequenceParameter~ SequenceParameters
        +Update()
    }
    
    class SequenceParameter {
        +string SequenceId
        +string ParameterId
        +int OrderNumber
        +Sequence Sequence
        +Parameter Parameter
    }
    
    class Range {
        +string Id
        +string Name
        +string Description
        +List~RangeValue~ Values
        +List~Parameter~ Parameters
        +Update()
    }
    
    class RangeValue {
        +string Id
        +string RangeId
        +string Value
        +string DisplayValue
        +int Order
        +Range Range
    }
    
    class Resource {
        +string Id
        +string Name
        +string Description
        +List~Parameter~ Parameters
    }
    
    class SequenceGroup {
        +List~SequenceGroupSequence~ SequenceGroupSequences
        +Update()
    }
    
    class SequenceGroupSequence {
        +string SequenceGroupId
        +string SequenceId
        +int Order
        +SequenceGroup SequenceGroup
        +Sequence Sequence
    }
    
    class SequenceGroupCollectionBase {
        +string CategoryTypeName
        +string CategoryName
        +List~SequenceGroupCollectionSequenceGroup~ SequenceGroupCollectionSequenceGroups
    }
    
    class SequenceGroupCollection~TEnum~ {
        +TEnum Category
    }
    
    class SequenceGroupCollectionSequenceGroup {
        +string SequenceGroupCollectionId
        +string SequenceGroupId
        +int Order
        +SequenceGroupCollectionBase SequenceGroupCollection
        +SequenceGroup SequenceGroup
    }
    
    class ParameterType {
        <<enumeration>>
        BooleanType
        StringType
        IntegerType
        DecimalType
        EnumType
        ArrayType
    }
    
    SequenceGroup --|> SequenceAggregateBase : inherits
    SequenceGroupCollectionBase --|> SequenceAggregateBase : inherits
    SequenceGroupCollection~TEnum~ --|> SequenceGroupCollectionBase : inherits
    
    Sequence "1" -- "many" SequenceParameter : contains
    Parameter "1" -- "many" SequenceParameter : used in
    SequenceGroup "1" -- "many" SequenceGroupSequence : contains
    Sequence "1" -- "many" SequenceGroupSequence : belongs to
    Range "1" -- "many" RangeValue : contains
    Range "1" -- "many" Parameter : used by
    Resource "1" -- "many" Parameter : referenced by
    Parameter -- ParameterType : has
    SequenceGroupCollectionBase "1" -- "many" SequenceGroupCollectionSequenceGroup : contains
    SequenceGroup "1" -- "many" SequenceGroupCollectionSequenceGroup : belongs to